--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
 //     txt = "Cancel";
 // }
 
-if (confirm("To participate in the experience, turn on your camera flashlight and keep walking") == true) {
+if (confirm("To participate in the experience, start walking") == true) {
     txt = "OK!";
 } else {
     txt = "Cancel";
 }
 
-setTimeout(function() { alert("See all those dots? At this exact moment, there are 8 other people with their flash lights on, walking home alone at night too."); }, 8000);
+setTimeout(function() { alert("See all those dots? At this exact moment, there are 8 other people walking home alone at night too."); }, 10000);
+
+
+setTimeout(function() { alert("That's the end of the experiment. Call Eunice now for a quick follow-up"); }, 2000);
 
 </script>
 </html>
