adds 2nd end notif

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@ if (confirm("To participate in the experience, start walking") == true) {
 
 setTimeout(function() { alert("See all those dots? At this exact moment, there are 8 other people walking home alone at night too."); }, 10000);
 
+setTimeout(function() { alert("See all those dots? At this exact moment, there are 8 other people walking home alone at night too."); }, 20000);
 
-setTimeout(function() { alert("That's the end of the experiment. Call Eunice now for a quick follow-up"); }, 2000);
+
 
 </script>
 </html>
