--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ if (confirm("To participate in the experience, start walking") == true) {
 
 setTimeout(function() { alert("See all those dots? At this exact moment, there are 8 other people walking home alone at night too."); }, 10000);
 
-setTimeout(function() { alert("See all those dots? At this exact moment, there are 8 other people walking home alone at night too."); }, 20000);
+setTimeout(function() { alert("That's the end of the experiment. Call Eunice for a quick follow-up."); }, 18000);
 
 
 
